tarif card add to cart

--- a/index.html
+++ b/index.html
@@ -359,8 +359,8 @@
                     <li><i class="fa-solid fa-xmark"></i><span data-i18n="pricing.f.support">Free 24/7 support</span>
                     </li>
                   </ul>
-                  <a href="#contact" class="cs_pricing_btn cs_up_3_hover" data-i18n="pricing.choose_plan"
-                    data-i18n-attr="aria-label:pricing.choose_plan_aria">Ta'rifni tanlang</a>
+                  <a class="cs_pricing_btn cs_up_3_hover"
+   href="/cart.html?tab=plans&cycle=monthly">Ta'rifni tanlang</a>
                 </div>
               </div>
             </div>
@@ -397,8 +397,8 @@
                     <li><i class="fa-solid fa-xmark"></i><span data-i18n="pricing.f.support">Free 24/7 support</span>
                     </li>
                   </ul>
-                  <a href="#contact" class="cs_pricing_btn cs_up_3_hover" data-i18n="pricing.choose_plan"
-                    data-i18n-attr="aria-label:pricing.choose_plan_aria">Ta'rifni tanlang</a>
+                 <a class="cs_pricing_btn cs_up_3_hover"
+   href="/cart.html?tab=plans&cycle=monthly">Ta'rifni tanlang</a>
                 </div>
                 <div class="cs_pricing_badge" data-i18n="pricing.popular">Ommabop</div>
               </div>
@@ -436,8 +436,8 @@
                     <li><i class="fa-solid fa-check"></i><span data-i18n="pricing.f.support">Free 24/7 support</span>
                     </li>
                   </ul>
-                  <a href="#contact" class="cs_pricing_btn cs_up_3_hover" data-i18n="pricing.choose_plan"
-                    data-i18n-attr="aria-label:pricing.choose_plan_aria">Ta'rifni tanlang</a>
+                 <a class="cs_pricing_btn cs_up_3_hover"
+   href="/cart.html?tab=plans&cycle=yearly">Ta'rifni tanlang</a>
                 </div>
               </div>
             </div>
