--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
               <div class="cs_header_actions">
                 <!-- Language selector -->
                 <div class="cs_lang" aria-label="Language selector">
-                  <button type="button" class="cs_lang_btn" aria-haspopup="listbox" aria-expanded="false">
+                  <div type="button" class="cs_lang_btn" aria-haspopup="listbox" aria-expanded="false">
                     <img src="https://flagcdn.com/w20/uz.png" alt="O'zbekcha bayroq">
                     <span class="cs_lang_code">O'zbekcha</span>
                     <i class="fa-solid fa-chevron-down"></i>
-                  </button>
+                  </div>
                   <ul class="cs_lang_menu" role="listbox">
                     <li role="option" data-lang="uz">
                       <img src="https://flagcdn.com/w20/uz.png" alt="O'zbekcha"> O'zbekcha
@@ -80,7 +80,7 @@
                 <!-- Cart -->
                 <a href="/cart.html" class="cs_cart" aria-label="Savatcha">
                   <i class="fa-solid fa-cart-shopping"></i>
-                  <span class="cs_cart_badge" id="cart-count">0</span>
+                  <!-- <span class="cs_cart_badge" id="cart-count">0</span> -->
                 </a>
               </div>
             </div>
