--- a/cart.html
+++ b/cart.html
@@ -1466,7 +1466,7 @@
           createdAt: new Date().toISOString()
         };
 
-        const API_BASE = "http://45.92.173.193";
+        const API_BASE = "https://idokon.uz";
         const url = `${API_BASE}/api/telegram-order`;
 
         const submitBtn = chkForm.querySelector('button[type="submit"]');
