--- a/index.html
+++ b/index.html
@@ -878,7 +878,7 @@
             message: document.getElementById("message").value.trim()
           };
 
-          const API_BASE = "http://45.92.173.193";
+          const API_BASE = "https://idokon.uz";
 
           try {
             const res = await fetch(`${API_BASE}/api/contact`, {
