--- a/cart.html
+++ b/cart.html
@@ -859,7 +859,7 @@
         </div>
         <div class="idk-sub-switch d-none" id="idk-plan-switch">
           <button class="idk-sub-btn is-active" data-cycle="monthly">Oylik</button>
-          <button class="idk-sub-btn" data-cycle="yearly">Yillik (-17%)</button>
+          <button class="idk-sub-btn" data-cycle="yearly">Yillik</button>
           <span class="idk-sub-indicator"></span>
         </div>
 
@@ -1051,9 +1051,9 @@
       ];
 
       const PLANS = [
-        { id: "plan-start", tag: "Start", subtitle: "Kichik do‘konlar uchun", priceMonthly: 100000, priceYearly: 1500000, icon: "assets/img/symbol.svg", features: ["1 foydalanuvchi", "Ombor hisoboti", "Sotuv tahlili", "24/7 support"] },
-        { id: "plan-standard", tag: "Standard", subtitle: "Standart do‘konlar uchun", priceMonthly: 150000, priceYearly: 1800000, icon: "assets/img/symbol1.svg", badge: "Ommabop", features: ["3 foydalanuvchi", "Inventar boshqaruvi", "Hisobot & tahlil", "Cheksiz support"] },
-        { id: "plan-premium", tag: "Premium", subtitle: "Katta do‘konlar uchun", priceMonthly: 250000, priceYearly: 3000000, icon: "assets/img/symbol2.svg", features: ["Cheksiz foydalanuvchi", "Kengaytirilgan funksiyalar", "Bar code scanning", "VIP support"] }
+        { id: "plan-start", tag: "Start", subtitle: "Kichik do‘konlar uchun", priceMonthly: 100000, priceYearly: 1000000, icon: "assets/img/symbol.svg", features: ["Cheksiz mahsulot qo‘shish", "Excel orqali tovarlarni bir zumda yuklash", "Qulay inventarizatsiya va ombor nazorati..."] },
+        { id: "plan-standard", tag: "Standard", subtitle: "Standart do‘konlar uchun", priceMonthly: 150000, priceYearly: 1500000, icon: "assets/img/symbol1.svg", badge: "Ommabop", features: ["Start tarifidagi barcha imkoniyatlar", "To‘lov tizimlari bilan integratsiyalar (Click, Payme, Uzum)...",] },
+        { id: "plan-premium", tag: "Premium", subtitle: "Katta do‘konlar uchun", priceMonthly: 250000, priceYearly: 2500000, icon: "assets/img/symbol2.svg", features: ["Standart tarifidagi barcha imkoniyatlar", "Mijozlar uchun bonus (Loyalty)", "Analitika (ABC tahlil, OOS tahlil)..."] }
       ];
 
       /* ================== Util ================== */
