--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="I-Dokon - Zamonaviy POS Tizimi | Kassa va Do'kon Boshqaruvi">
     <meta property="og:description" content="O'zbekistondagi eng yaxshi POS tizimi. Biznesingizni rivojlantiring, samaradorligingizni oshiring!">
-    <meta property="og:image" content="https://idokon.uz/assets/img/home.png">
+    <meta property="og:image" content="https://idokon.uz/assets/img/logo.png">
     <meta property="og:url" content="https://idokon.uz">
     <meta property="og:site_name" content="I-Dokon">
     <meta property="og:locale" content="uz_UZ">
@@ -28,7 +28,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="I-Dokon - Zamonaviy POS Tizimi">
     <meta name="twitter:description" content="O'zbekistondagi eng yaxshi POS tizimi. Biznesingizni rivojlantiring!">
-    <meta name="twitter:image" content="https://idokon.uz/assets/img/home.png">
+    <meta name="twitter:image" content="https://idokon.uz/assets/img/logo.png">
     
     <!-- Canonical URL -->
     <link rel="canonical" href="https://idokon.uz">
@@ -126,11 +126,11 @@
           <div class="cs_main_header_in">
             <div class="cs_main_header_left">
               <a class="cs_site_branding" href="index.html" aria-label="Home page link">
-                <img src="assets/img/logo.png" alt="I-Dokon Logo - POS Tizimi">
+                <img src="assets/img/logo.png" alt="Logo">
               </a>
             </div>
             <div class="cs_main_header_center">
-              <nav class="cs_nav cs_medium cs_primary_font" role="navigation" aria-label="Main navigation">
+              <nav class="cs_nav cs_medium cs_primary_font">
                 <ul class="cs_nav_list cs_onepage_nav">
                   <li class="menu-item"><a href="./index.html#home" data-i18n="nav.home">Asosiy</a></li>
                   <li><a href="./index.html#features" data-i18n="nav.features">Xususiyatlar</a></li>
@@ -199,16 +199,16 @@
             </div>
             <div class="col-lg-5">
               <div class="cs_hero_thumb">
-                <img src="assets/img/home.png" alt="I-Dokon POS tizimi interfeysi - Hero rasm">
+                <img src="assets/img/logo.png" alt="Hero Image">
               </div>
             </div>
           </div>
         </div>
         <div class="cs_hero_shape1">
-          <img src="assets/img/hero_bg3.png" alt="Dekorativ shaql elementi">
+          <img src="assets/img/hero_bg3.png" alt="Polygon Icon">
         </div>
         <div class="cs_hero_shape2">
-          <img src="assets/img/hero_bg2.png" alt="Dekorativ shaql elementi">
+          <img src="assets/img/hero_bg2.png" alt="Polygon Icon">
         </div>
       </section>
       <!-- End Hero section -->
@@ -360,7 +360,7 @@
         }
       </style>
 
-      <section class="cs_business_feature position-relative" id="features" aria-label="Xususiyatlar bo'limi">
+      <section class="cs_business_feature position-relative" id="features">
         <div class="cs_height_143 cs_height_lg_75"></div>
         <div class="container">
           <div class="cs_section_heading cs_style_1 text-center">
@@ -377,7 +377,7 @@
           <div id="features-row" class=" row cs_gap_y_30 wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.2s">
           </div>
           <div class="cs_featured_shape">
-            <img src="assets/img/Vector.svg" alt="Dekorativ vektor shakl">
+            <img src="assets/img/Vector.svg" alt="Image">
           </div>
         </div>
         <div class="cs_height_150 cs_height_lg_80"></div>
@@ -1066,10 +1066,10 @@
       </div>
 
       <!--End contact Section -->
-    </main>
-    <footer class="cs_site_footer cs_color_1 cs_sticky_footer" role="contentinfo" aria-label="Footer bo'limi">
+    </div>
+    <footer class="cs_site_footer cs_color_1 cs_sticky_footer">
       <div class="cs_footer_shape1">
-        <img src="assets/img/Vector1.svg" alt="Footer dekorativ shakl">
+        <img src="assets/img/Vector1.svg" alt="Vector-Icon">
       </div>
       <div class="cs_height_140 cs_height_lg_70"></div>
 
@@ -1080,7 +1080,7 @@
             <div class="col-lg-3 col-xl-4">
               <div class="cs_footer_widget">
                 <div class="cs_text_field">
-                  <img src="assets/img/logo.png" alt="I-Dokon Logo" class="cs_footer_logo">
+                  <img src="assets/img/logo.png" alt="Logo" class="cs_footer_logo">
                   <p class="cs_text_white mb-0" data-i18n="footer.about">
                     Bizning POS dasturimiz biznes jarayonlaringizni soddalashtirib, samaradorlikni oshiradigan yakuniy
                     yechimdir.
