features bug fixed

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="revisit-after" content="7 days">
     
     <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
+    <meta property="og:type" content="article">
     <meta property="og:title" content="I-Dokon - Zamonaviy POS Tizimi | Kassa va Do'kon Boshqaruvi">
     <meta property="og:description" content="O'zbekistondagi eng yaxshi POS tizimi. Biznesingizni rivojlantiring, samaradorligingizni oshiring!">
     <meta property="og:image" content="https://idokon.uz/assets/img/logo.png">
