SEO optimizated and home page logo changd

--- a/index.html
+++ b/index.html
@@ -861,43 +861,31 @@
 
       <!-- End Pricing section -->
       <!--Start Testimonial Section -->
-      <section id="idokon-course" class="cs_course_section position-relative"
-        style="background:linear-gradient(90deg,#f9fbfd 0%,#eef2f6 100%);padding:80px 0;">
+      <section id="idokon-course" class="cs_course_section position-relative" style="background:linear-gradient(90deg,#f9fbfd 0%,#eef2f6 100%);padding:80px 0;">
         <div class="container">
-          <div class="row align-items-center">
+          <div class="row align-items-center cs_gap_y_40">
             <div class="col-lg-6 wow fadeInLeft" data-wow-duration="0.8s" data-wow-delay="0.2s">
               <div class="cs_course_img text-center position-relative gallery-wrapper">
-
-                <div class="gallery-card card1">
-                  <img src="./assets/img/course.png" alt="Screenshot 1">
-                </div>
-               
-            <div class="cs_cta_in">
-              <div class="cs_section_heading cs_style_1">
-                <h2 class="cs_section_title cs_text_white" data-i18n="cta.title">
-                  Biz bilan biznesingizni yangilang <br> Eng zamonaviy POS yechimlari!
-                </h2>
-                <p class="cs_section_subtitle mb-0" data-i18n="cta.text">
-                  Tranzaktsiyalarning kelajagini his eting! Bugun demoni rejalashtiring va qanday qilib guvoh bo'ling
-                  <br>
-                  bizning POS yechimimiz biznesingizni inqilob qilishi mumkin.
-                </p>
-              </div>
-              <div class="cs_btn_group text-center">
-                <button id="demoBtn2" class="cs_btn cs_bg_white" data-i18n="cta.demo"
-                  data-i18n-attr="aria-label:cta.demo_aria">Demo ishlatib ko'rish</button>
-                <a href="tel:+998991180999" class="cs_btn cs_bg_accent" data-i18n="cta.contact"
-                  data-i18n-attr="aria-label:cta.contact_aria">Bog'lanish</a>
+                <div class="gallery-card card1"><img src="./assets/img/course.png" alt="Screenshot 1"></div>
+                <div class="gallery-card card2"><img src="./assets/img/course2.png" alt="Screenshot 2"></div>
+                <div class="gallery-card card3"><img src="./assets/img/course3.png" alt="Screenshot 3"></div>
+                <div class="gallery-card card4"><img src="./assets/img/course4.png" alt="Screenshot 4"></div>
               </div>
             </div>
-            <div class="cs_cta_shape1"><img src="assets/img/Ellipse_small.svg" alt="Image"></div>
-            <div class="cs_cta_shape2"><img src="assets/img/stroke.svg" alt="Image"></div>
+
+            <div class="col-lg-6 wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.3s">
+              <div class="cs_section_heading cs_style_1">
+                <h2 class="cs_section_title mb-3" data-i18n="course.title"></h2>
+                <p class="cs_section_subtitle" data-i18n="course.desc" style="font-size:1.1rem;color:#444;line-height:1.75;max-width:90%;"></p>
+                <a href="https://idokon-course.vercel.app/" target="_blank" class="cs_btn cs_bg_accent" data-i18n="course.btn" style="margin-top:28px;font-size:1.05rem;padding:12px 30px;border-radius:10px;box-shadow:0 4px 14px rgba(60,122,137,0.18);font-weight:600;"></a>
+              </div>
+            </div>
           </div>
         </div>
       </section>
+      <!--End Idokon Course Section -->
 
-      <!-- End CTA section -->
-      <!--Start FAQ's section -->
+      <!-- Start FAQ's section -->
       <section class="cs_faq_wrap position-relative" id="faq">
         <div class="cs_height_143 cs_height_lg_75"></div>
         <div class="container">
