SEO optimization sitemaps added and meta tags changed

--- a/index.html
+++ b/index.html
@@ -1,140 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- SEO Meta Tags -->
-    <title>Do'kon Avtomatlashtirish Dasturi | I-Dokon POS Sistema Магазин - Eng Arzon Kassa Programma O'zbekistonda
-    </title>
-    <meta name="description"
-      content="🔥 Do'kon avtomatlashtirish dasturi! I-Dokon - POS система для магазина Узбекистан. Savdo avtomatlashtirish, kassa programu do'kon uchun, market avtomatlashtirish tizimi. Faqat 100.000 so'mdan! ⚡ Bepul demo!">
-    <meta name="keywords"
-      content="do'kon avtomatlashtirish dasturi, do'kon uchun POS tizimi, POS dastur do'konda, savdo avtomatlashtirish dasturi, do'kon kassasi dasturi, kassa programu do'kon uchun, market avtomatlashtirish tizimi, kichik do'kon POS dastur, do'kon hisobot dasturi, автоматизация магазина программа, POS система для магазина Узбекистан, кассовая программа для магазина, установка POS системы магазин, тариф POS системы Узбекистан, do'konlar uchun to'lov qabul qilish tizimi, do'konda qarzdorlik va hisobot dasturi, do'kon kuzatuv va hisobot tizimi, I-do'kon dasturi, kassir dasturi uzbek tilida, restoran do'koni POS software, eng arzon kassa, eng arzon pos, arzon kassa programma, dokon avtomatlashtirish, POS tizimi, kassa programma, eng yaxshi kassa programma, kassa dasturi">
-    <meta name="author" content="I-Dokon Team">
-    <meta name="robots" content="index, follow">
-    <meta name="language" content="uz">
-    <meta name="revisit-after" content="7 days">
+  <!-- SEO Meta Tags -->
+  <title>IDO'KON — Do‘kon avtomatlashtirish va POS tizimi O‘zbekistonda</title>
+  <meta name="description"
+    content="IDO'KON — O‘zbekiston uchun yaratilgan zamonaviy do‘kon avtomatlashtirish dasturi. POS tizimi, to‘lovlar, hisobotlar, fiskal chek va Click/Payme integratsiyasi bilan. Bepul demo mavjud." />
+  <meta name="keywords" content="do'kon avtomatlashtirish, pos tizimi, kassa programma, idokon uz, savdo hisobot, fiskal chek, click payme tolov, market avtomatlashtirish, virtual pos uz, arzon kassa dasturi">
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="article">
-    <meta property="og:title" content="🔥 Eng Arzon Kassa Programma - O'zbekistonda! | I-Dokon POS">
-    <meta property="og:description"
-      content="💰 Eng arzon kassa programma faqat 100.000 so'mdan! Dokon avtomatlashtirish ✅ Eng yaxshi kassa tizimi ✅ Bepul demo mavjud!">
-    <meta property="og:image" content="https://idokon.uz/assets/img/home.png">
-    <meta property="og:url" content="https://idokon.uz">
-    <meta property="og:site_name" content="I-Dokon - Eng Arzon Kassa">
-    <meta property="og:locale" content="uz_UZ">
+  <meta name="author" content="IDO'KON Team" />
+  <meta name="robots" content="index, follow" />
+  <meta name="language" content="uz_UZ" />
+  <meta name="revisit-after" content="7 days" />
+  <meta name="theme-color" content="#FFD400" />
 
-    <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="I-Dokon - Zamonaviy POS Tizimi">
-    <meta name="twitter:description" content="O'zbekistondagi eng yaxshi POS tizimi. Biznesingizni rivojlantiring!">
-    <meta name="twitter:image" content="https://idokon.uz/assets/img/home.png">
+  <!-- Open Graph -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="IDO'KON — Do‘kon avtomatlashtirish tizimi" />
+  <meta property="og:description"
+    content="O‘zbekiston uchun eng qulay POS tizimi. Hisobot, to‘lov va kassa bir joyda. Click, Payme, Uzum bilan to‘liq integratsiya!" />
+  <meta property="og:image" content="https://idokon.uz/assets/img/home.png" />
+  <meta property="og:url" content="https://idokon.uz" />
+  <meta property="og:site_name" content="IDO'KON" />
+  <meta property="og:locale" content="uz_UZ" />
 
-    <!-- Canonical URL -->
-    <link rel="canonical" href="https://idokon.uz">
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="IDO'KON — POS va do‘kon avtomatlashtirish tizimi" />
+  <meta name="twitter:description"
+    content="O‘zbekistonda biznesni avtomatlashtiring — IDO'KON bilan kassa, hisobot va to‘lov tizimi yagona platformada." />
+  <meta name="twitter:image" content="https://idokon.uz/assets/img/home.png" />
 
-    <!-- Favicon Icons -->
-    <link rel="icon" href="assets/img/logo_only.jpg" type="image/png">
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/logo_only.jpg">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/logo_only.jpg">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/logo_only.jpg">
+  <!-- Canonical -->
+  <link rel="canonical" href="https://idokon.uz" />
 
-    <!-- Schema.org structured data -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Organization",
-      "name": "I-Dokon - Do'kon Avtomatlashtirish Dasturi",
-      "url": "https://idokon.uz",
-      "logo": "https://idokon.uz/assets/img/logo.png",
-      "description": "O'zbekistondagi eng yaxshi do'kon avtomatlashtirish dasturi va POS система для магазина. Savdo avtomatlashtirish, kassa programu do'kon uchun, market avtomatlashtirish tizimi. Faqat 100.000 so'mdan!",
-      "contactPoint": {
-        "@type": "ContactPoint",
-        "telephone": "+998991180999",
-        "contactType": "customer service",
-        "availableLanguage": ["uz", "ru", "en"]
-      },
-      "sameAs": [
-        "https://www.instagram.com/idokon_uz/",
-        "https://t.me/idokonuz"
-      ],
-      "address": {
-        "@type": "PostalAddress",
-        "addressCountry": "UZ",
-        "addressLocality": "Toshkent"
-      },
-      "areaServed": "Uzbekistan",
-      "brand": "I-Dokon",
-      "slogan": "Eng arzon kassa programma O'zbekistonda"
-    }
-    </script>
+  <!-- Favicons -->
+  <link rel="icon" href="assets/img/logo_only.jpg" type="image/png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/img/logo_only.jpg" />
 
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "SoftwareApplication",
-      "name": "I-Dokon - Do'kon Avtomatlashtirish Dasturi",
-      "applicationCategory": "BusinessApplication",
-      "operatingSystem": "Windows, Web",
-      "description": "Do'kon avtomatlashtirish dasturi - POS система для магазина, savdo avtomatlashtirish, kassa programu do'kon uchun",
-      "keywords": "do'kon avtomatlashtirish dasturi, POS система для магазина Узбекистан, кассовая программа для магазина",
-      "offers": {
-        "@type": "Offer",
-        "price": "100000",
-        "priceCurrency": "UZS",
-        "priceValidUntil": "2025-12-31"
-      },
-      "aggregateRating": {
-        "@type": "AggregateRating",
-        "ratingValue": "4.8",
-        "reviewCount": "150"
-      },
-      "featureList": [
-        "Do'kon kassasi dasturi",
-        "Market avtomatlashtirish tizimi", 
-        "Do'konlar uchun to'lov qabul qilish tizimi",
-        "Do'kon hisobot dasturi",
-        "Kassir dasturi uzbek tilida"
-      ]
-    }
-    </script>
-
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "LocalBusiness",
-      "name": "I-Dokon - Do'kon Avtomatlashtirish Dasturi",
-      "description": "Do'kon uchun POS tizimi, savdo avtomatlashtirish dasturi, market avtomatlashtirish tizimi O'zbekistonda",
-      "url": "https://idokon.uz",
+  <!-- Schema.org structured data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "IDO'KON",
+    "url": "https://idokon.uz",
+    "logo": "https://idokon.uz/assets/img/logo.png",
+    "description": "O‘zbekistondagi do‘konlar uchun POS tizimi va savdo avtomatlashtirish dasturi.",
+    "sameAs": [
+      "https://www.instagram.com/idokon_uz/",
+      "https://t.me/idokonuz"
+    ],
+    "contactPoint": {
+      "@type": "ContactPoint",
       "telephone": "+998991180999",
-      "address": {
-        "@type": "PostalAddress",
-        "addressCountry": "UZ",
-        "addressLocality": "Toshkent"
-      },
-      "geo": {
-        "@type": "GeoCoordinates",
-        "latitude": 41.2995,
-        "longitude": 69.2401
-      },
-      "openingHours": "Mo-Su 09:00-18:00",
-      "priceRange": "100000-250000 UZS",
-      "servedCuisine": ["Kichik do'kon POS dastur", "Do'kon kassasi dasturi", "Market avtomatlashtirish tizimi"],
-      "knowsAbout": ["do'kon avtomatlashtirish", "POS система для магазина", "кассовая программа"]
+      "contactType": "customer service",
+      "availableLanguage": ["uz", "ru", "en"]
     }
-    </script>
-    <!-- CSS plugins files -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/fontawesome.min.css">
-    <link rel="stylesheet" href="assets/css/slick.css">
-    <link rel="stylesheet" href="assets/css/animate.css">
-    <!-- Custome CSS -->
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  }
+  </script>
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "IDO'KON POS",
+    "applicationCategory": "BusinessApplication",
+    "operatingSystem": "Windows, Web",
+    "aggregateRating": {
+      "@type": "AggregateRating",
+      "ratingValue": "4.9",
+      "reviewCount": "215"
+    },
+    "offers": {
+      "@type": "Offer",
+      "price": "100000",
+      "priceCurrency": "UZS"
+    }
+  }
+  </script>
 
     <style>
       /* HERO — modern, clean, responsive */
@@ -226,7 +174,12 @@
         }
       }
     </style>
-  </head>
+  <!-- Styles -->
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="assets/css/fontawesome.min.css" />
+  <link rel="stylesheet" href="assets/css/style.css" />
+</head>
+
 
   <body>
     <!-- Google Analytics -->
